# agentkernal

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  agent-kernel-design.md  agentkernel.toml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentkernel/: __init__.py  __main__.py  agent.py  budget.py  checkpoint.py  cli.py  config.py  cron.py  curation.py  doctor.py  embeddings.py  evaluation.py  improvement.py  insights.py  kanban.py  knowledge.py  loops.py  memory.py  paths.py  plugins.py  profiles.py  progress.py  redaction.py  roles.py  semantic_index.py  semantic_memory.py  skills.py  subagent.py  telemetry.py  types.py  worktree.py
agentkernel/approval/: __init__.py  base.py  cli.py  policy.py  risk.py  sandbox.py
agentkernel/context/: __init__.py  manager.py  truncate.py
agentkernel/mcp/: __init__.py  client.py  config.py  tools.py
agentkernel/providers/: __init__.py  _http.py  anthropic.py  base.py  compat.py  credentials.py  local.py  openai.py
agentkernel/tools/: __init__.py  base.py
agentkernel/tools/builtin/: __init__.py  checkpoint_tool.py  clarify.py  files.py  kanban_tool.py  search.py  shell.py  todo.py
agentkernel/tui/: __init__.py  app.py
examples/: README.md
examples/evals/: builtin-tools.toml
examples/loops/: until-tests-pass.toml
examples/playground/: NOTES.md  calc.py  inventory.py
examples/skills/code-review/: SKILL.md
loops/: review-and-fix.toml  until-build-succeeds.toml  until-lint-clean.toml  until-tests-pass.toml  until-typecheck-clean.toml
profiles/: coder.toml  planner.toml  researcher.toml  reviewer.toml  safe.toml
skills/code-review/: SKILL.md
skills/commit-and-pr/: SKILL.md
skills/debug-triage/: SKILL.md
skills/refactor/: SKILL.md
skills/security-review/: SKILL.md
skills/write-tests/: SKILL.md
templates/: README.md  SKILL.md  eval-suite.toml  loop.toml  mcp-servers.toml  profile.toml  tool_module.py
tests/: __init__.py  conftest.py  fakes.py  mcp_server.py  test_approval.py  test_background.py  test_budget.py  test_checkpoint.py  test_cli.py  test_compat_providers.py  test_completion.py  test_concurrency.py  test_context.py  test_credentials.py  test_cron.py  test_curation.py  test_docker_sandbox.py  test_evaluation.py  test_files.py  test_http.py  test_improvement.py  test_init.py  test_insession_tools.py  test_kanban.py  test_knowledge.py  test_loop.py  test_loops.py  test_mcp.py  test_memory.py  test_memory_scope.py  test_model_override.py  test_multimodal.py  test_new_command.py  test_observability.py  test_paths.py  test_plan.py  test_prefix_stability.py  test_profiles.py  test_providers.py  test_reasoning.py  (+20 more)
