[project]
name = "agentkernel"
version = "0.0.1"
description = "A minimal, dependency-light kernel for a general-purpose AI agent."
readme = "AGENT.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",  # tool-arg validation (design §6.2)
    "httpx>=0.27",       # provider HTTP calls (M1, design §5)
]

[project.scripts]
agentkernel = "agentkernel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentkernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
